# vittlify

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.rst  TODO  app.json  dev.yml  dev_requirements.txt  docker-compose.yml  fabfile.py  install_os_dependencies.sh  package.json  pyproject.toml  requirements.txt  setup.sql
.github/workflows/: pr.yml  publish.yml
compose/: docker-compose.dev.yml  docker-compose.prod.yml
config/: settings.py  urls.py  wsgi.py
config/settings/: common.py  local.py  production.py
docs/: Makefile  conf.py  index.rst  make.bat
groceries/: admin.py  api_views.py  email_template.py  models.py  tests.py  urls.py  utils.py  views.py
groceries/migrations/: 0001_initial.py  0002_auto_20151212_2207.py  0004_notifyaction.py  0005_auto_20151227_0351.py  0006_auto_20151227_0443.py  0007_auto_20160113_1836.py  0009_auto_20160121_1317.py  0010_auto_20160202_1751.py  0011_auto_20160202_1850.py  0012_auto_20160202_1857.py  0013_auto_20160202_1929.py  0015_auto_20161029_2325.py  0016_item_guid.py  0016_remove_shopper_email.py  0017_auto_20170622_0305.py  0019_sshkey_title.py  0020_auto_20170624_1932.py  0022_shoppinglist_guid.py  0023_auto_20170625_1426.py  0027_auto_20220103_0250.py  0028_auto_20220725_0117.py
nodejs/: Dockerfile  config.js  package-lock.json  package.json  vittlify.js
requirements/: local.txt
tests/: engine.py  settings.yml
vittlify/: .travis.yml  manage.py
vittlify/config/: settings.py  travis.settings  urls.py  wsgi.py
vittlify/groceries/: admin.py  api_views.py  auth.py  (+10 more)
(+46 files in other folders)
