[tool.poetry]
name = "vittlify"
version = "0.1.0"
description = ""
authors = ["Kevin Yokley <kyokley2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
psycopg2 = "^2.9.2"
djangorestframework = "^3.12.4"
django-cron = "^0.5.1"
requests = "^2.26.0"
cryptography = "^36.0.0"
gunicorn = "^20.1.0"
django-extensions = "^3.1.5"

[tool.poetry.dev-dependencies]
bpython = "^0.22.1"
pdbpp = "^0.10.3"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
